--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+	<title>Lekhok</title>
+	<link rel="stylesheet" href="css/all.min.css" />
+	<link rel="stylesheet" href="css/materialize.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+	<div class="container center-align">
+		<h3>Lekhok</h3>
+		<div class="row">
+			<form id="image-form">
+				<div class="file-field input-field">
+					<div class="btn black">
+						<span>Browse</span>
+						<input type="file" id="img" />
+					</div>
+					<div class="file-path-wrapper">
+						<input type="text" class="file-path validate" placeholder="Choose an image for OCR" required/>
+					</div>
+				</div>
+				<input type="submit" value="Process" class="btn-large black" />
+			</form>
+		</div>
+		<div class="row">
+			<div class="card large">
+				<div class="card-content">
+					<textarea class="materialize-textarea" id="ta" data-length="1000"></textarea>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/materialize.min.js"></script>
+	<script>
+
+		const path = require('path');
+		const os = require('os');
+		const { ipcRenderer } = require('electron');
+		const form = document.getElementById('image-form');
+		const img = document.getElementById('img');
+		const lang = 'ben';
+
+		// On submit
+		form.addEventListener('submit', (e) => {
+			e.preventDefault();
+			const imgPath = img.files[0].path;
+			ipcRenderer.send('image:ocr', { imgPath, lang, });
+		});
+
+		// On done
+		ipcRenderer.on('image:done', (e, data) => {
+			document.getElementById('ta').innerHTML = data;
+			M.toast({
+				html: `Done`,
+			});
+		});
+	</script>
+</body>
 </html>
