--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 		<div class="row">
 			<div class="card large">
 				<div class="card-content">
-					<textarea class="materialize-textarea" id="ta" data-length="1000"></textarea>
+					<textarea class="materialize-textarea" id="ta"></textarea>
 				</div>
 			</div>
 		</div>
